Manage-your-Service-Mesh-with-Istio/translator-microservice/yaml/istio/trans-ms-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: translator-ms-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: translator-ms
spec:
  hosts:
  - "*"
  gateways:
  - translator-ms-gateway
  http:
  - match:
    - uri:
        prefix: "/translator-ms"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: translator-ms-service
  - match:
    - uri:
        prefix: "/watson-translator"
    route:
    - destination:
        port:
          number: 80
        host: translator-ms-service
