Manage-your-Service-Mesh-with-Istio/translator-microservice/yaml/istio/watson-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: watson
spec:
  hosts:
  - gateway-lon.watsonplatform.net
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: gateway-lon.watsonplatform.net
        port:
          number: 443
      weight: 100
    fault:
      delay:
        percent: 100
        fixedDelay: 4s
