Manage-your-Service-Mesh-with-Istio/translator-microservice/yaml/istio/watson-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: watson
spec:
  hosts:
  - gateway-lon.watsonplatform.net
  ports:
  - number: 443
    name: http-port-for-tls-origination
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: watson-tls-originate
spec:
  host: gateway-lon.watsonplatform.net
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE # initiates HTTPS when accessing gateway-lon.watsonplatform.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: watson
spec:
  hosts:
  - gateway-lon.watsonplatform.net
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: gateway-lon.watsonplatform.net
        port:
          number: 443
      weight: 100
